tests/type/errors/bad_bin_op2.typedsol
2:19 error: Invalid binary operator for these arguments